Update and rename 2020-06-02-java-low-latency to 2020-06-02-java-low-latency.md